--- a/index.html
+++ b/index.html
@@ -5,6 +5,59 @@
     <link href= "./resources/css/style.css" type= "text/css" rel= "stylesheet"/>
   </head>
   <body>
-
+    <header>
+      <img url("./resources/images/img-tea-cozy-logo.png")/>
+      <nav>
+        <p><a href="">Mission</a></p>
+        <p><a href="">Featured Tea</a></p>
+        <p><a href="">Locations</a></p>
+      </nav>
+    </header>
+    <div class="mission">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+    <div class="features">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy</h4>
+      <div class="flex features">
+        <div class="berry"><img src="./resources/images/img-berryblitz.jpg"/><p>Fall Berry Blitz Tea</p></div>
+        <div class="rum"><img src="./resources/images/img-spiced-rum.jpg"/><p>Spiced Rum Tea</p></div>
+        <div class="donuts"><img src="./resources/images/img-donut.jpg"/><p>Seasonal Donuts</p></div>
+        <div class="myrtle"><img src="./resources/images/img-donut.jpg"/><p>Myrtle Ave Tea</p></div>
+        <div class="bedford"><img src="./resources/images/img-bedford-bizarre.jpg"/><p>Bedford Bizarre Tea</p></div>
+      </div>
+    </div>
+    <div class="locations">
+      <h2>Locations</h2>
+      <div class="flex locations">
+        <div class="location">
+          <p>Downtown</p>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location">
+          <p>East Bayside</p>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location">
+          <p>Oakdale</p>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
   </body>
 </html>
