--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <header>
       <img url("./resources/images/img-tea-cozy-logo.png")/>
       <nav>
-        <p><a href="">Mission</a></p>
-        <p><a href="">Featured Tea</a></p>
-        <p><a href="">Locations</a></p>
+        <p><a href="#mission">Mission</a></p>
+        <p><a href="#features">Featured Tea</a></p>
+        <p><a href="#locations">Locations</a></p>
       </nav>
     </header>
-    <div class="mission">
+    <div id="mission">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
-    <div class="features">
+    <div id="features">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy</h4>
       <div class="flex features">
@@ -28,23 +28,23 @@
         <div class="bedford"><img src="./resources/images/img-bedford-bizarre.jpg"/><p>Bedford Bizarre Tea</p></div>
       </div>
     </div>
-    <div class="locations">
+    <div id="locations">
       <h2>Locations</h2>
       <div class="flex locations">
         <div class="location">
-          <p>Downtown</p>
+          <h3>Downtown</h3>
           <p>384 West 4th St</p>
           <p>Suite 108</p>
           <p>Portland, Maine</p>
         </div>
         <div class="location">
-          <p>East Bayside</p>
+          <h3>East Bayside</h3>
           <p>3433 Phisherman's Avenue</p>
           <p>(Northwest Corner)</p>
           <p>Portland, Maine</p>
         </div>
         <div class="location">
-          <p>Oakdale</p>
+          <h3>Oakdale</h3>
           <p>515 Crescent Avenue</p>
           <p>Second Floor</p>
           <p>Portland, Maine</p>
