--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img url("./resources/images/img-tea-cozy-logo.png")/>
+      <img src="./resources/images/img-tea-cozy-logo.png"/>
       <nav>
         <p><a href="#mission">Mission</a></p>
         <p><a href="#features">Featured Tea</a></p>
@@ -14,18 +14,20 @@
       </nav>
     </header>
     <div id="mission">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      <div>
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
     </div>
     <div id="features">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy</h4>
       <div class="flex features">
-        <div class="berry"><img src="./resources/images/img-berryblitz.jpg"/><p>Fall Berry Blitz Tea</p></div>
-        <div class="rum"><img src="./resources/images/img-spiced-rum.jpg"/><p>Spiced Rum Tea</p></div>
-        <div class="donuts"><img src="./resources/images/img-donut.jpg"/><p>Seasonal Donuts</p></div>
-        <div class="myrtle"><img src="./resources/images/img-donut.jpg"/><p>Myrtle Ave Tea</p></div>
-        <div class="bedford"><img src="./resources/images/img-bedford-bizarre.jpg"/><p>Bedford Bizarre Tea</p></div>
+        <div><img src="./resources/images/img-berryblitz.jpg"/><p>Fall Berry Blitz Tea</p></div>
+        <div><img src="./resources/images/img-spiced-rum.jpg"/><p>Spiced Rum Tea</p></div>
+        <div><img src="./resources/images/img-donut.jpg"/><p>Seasonal Donuts</p></div>
+        <div><img src="./resources/images/img-donut.jpg"/><p>Myrtle Ave Tea</p></div>
+        <div><img src="./resources/images/img-bedford-bizarre.jpg"/><p>Bedford Bizarre Tea</p></div>
       </div>
     </div>
     <div id="locations">
