--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href= "./resources/css/style.css" type= "text/css" rel= "stylesheet"/>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img src="./resources/images/img-tea-cozy-logo.png"/>
       <nav>
         <p><a href="#mission">Mission</a></p>
@@ -13,10 +13,12 @@
         <p><a href="#locations">Locations</a></p>
       </nav>
     </header>
-    <div id="mission">
-      <div class="our mission">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <div class="mission">
+      <div id="mission" class="flex mission">
+        <div class="our mission">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
     </div>
     <div id="features">
